--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link type="image/x-icon" href="./images/favicon.ico" rel="shortcut icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +19,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/offerings.html"></include>
-    <include src="./partials/menu.html"></include>
+    <include src="./partials/favorites.html"></include>
     <include src="./partials/customers.html"></include>
     <include src="./partials/subscribe.html"></include>
     <include src="./partials/footer.html"></include>
