--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
     />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./modal.js"></script>
   </head>
-  <body>
+  <body data-page>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
+    <include src="./partials/modal.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/offerings.html"></include>
     <include src="./partials/favorites.html"></include>
