--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
     <script type="module" src="./modal.js"></script>
+    <script type="module" src="./swiper.js"></script>
   </head>
   <body data-page>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
