--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,7 @@
   <body data-page>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/modal.html"></include>
-    <include src="./partials/hero.html"></include>
-    <include src="./partials/offerings.html"></include>
-    <include src="./partials/favorites.html"></include>
-    <include src="./partials/customers.html"></include>
-    <include src="./partials/subscribe.html"></include>
+    <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
